refactor: add diagrams and interview simulator links to module1, enhance circular spinning layout for exercises modules

--- a/module1.html
+++ b/module1.html
@@ -25,17 +25,13 @@
       <li><a href="resources.html" class="nav-link">Resources</a></li>
       <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
       <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
     </ul>
   </div>
 </header>
 
 <main class="page-content">
-  <div class="breadcrumb" style="margin-bottom:20px; text-align:left;">
-    <a href="index.html" style="color: var(--accent-color);">Home</a> &gt;
-    <a href="exercises.html" style="color: var(--accent-color);">Exercises</a> &gt;
-    <span>Module 1</span>
-  </div>
-
   <section class="card fade-in">
     <h1>Module 1: Foundations &amp; Modern C++</h1>
     <p>This module covers essential modern C++ techniques—including RAII, smart pointers, and lambdas.</p>
