--- a/exercises.html
+++ b/exercises.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohad’s WeCode | Exercises</title>
   <link rel="stylesheet" href="styles/style.css">
-  <!-- Interact.js has been removed since dragging is no longer needed -->
+  <!-- Interact.js removed as it's no longer needed -->
 </head>
 <body class="page-exercises fade-in">
   <header>
@@ -29,42 +29,45 @@
       Explore interactive modules presented as 3D tickets! Each ticket is a quick link to a topic.
     </p>
 
-    <div class="modules-grid" id="modulesGrid">
-      <!-- Module Tickets -->
-      <div class="course-module card">
-        <h2>Module 1</h2>
-        <p>Foundations &amp; Modern C++</p>
-        <a href="module1.html" class="btn">Open</a>
-      </div>
-      <div class="course-module card">
-        <h2>Module 2</h2>
-        <p>Data Structures &amp; Algorithms</p>
-        <a href="module2.html" class="btn">Open</a>
-      </div>
-      <div class="course-module card">
-        <h2>Module 3</h2>
-        <p>Real-Time &amp; Embedded</p>
-        <a href="module3.html" class="btn">Open</a>
-      </div>
-      <div class="course-module card">
-        <h2>Module 4</h2>
-        <p>Concurrency &amp; Multithreading</p>
-        <a href="module4.html" class="btn">Open</a>
-      </div>
-      <div class="course-module card">
-        <h2>Module 5</h2>
-        <p>Memory &amp; Debugging</p>
-        <a href="module5.html" class="btn">Open</a>
-      </div>
-      <div class="course-module card">
-        <h2>Module 6</h2>
-        <p>Templates &amp; Metaprogramming</p>
-        <a href="module6.html" class="btn">Open</a>
-      </div>
-      <div class="course-module card">
-        <h2>Module 7</h2>
-        <p>System Design &amp; Advanced</p>
-        <a href="module7.html" class="btn">Open</a>
+    <!-- New wrapper for the spinning well -->
+    <div class="modules-wrapper">
+      <div class="modules-grid" id="modulesGrid">
+        <!-- Module Tickets -->
+        <div class="course-module card">
+          <h2>Module 1</h2>
+          <p>Foundations &amp; Modern C++</p>
+          <a href="module1.html" class="btn">Open</a>
+        </div>
+        <div class="course-module card">
+          <h2>Module 2</h2>
+          <p>Data Structures &amp; Algorithms</p>
+          <a href="module2.html" class="btn">Open</a>
+        </div>
+        <div class="course-module card">
+          <h2>Module 3</h2>
+          <p>Real-Time &amp; Embedded</p>
+          <a href="module3.html" class="btn">Open</a>
+        </div>
+        <div class="course-module card">
+          <h2>Module 4</h2>
+          <p>Concurrency &amp; Multithreading</p>
+          <a href="module4.html" class="btn">Open</a>
+        </div>
+        <div class="course-module card">
+          <h2>Module 5</h2>
+          <p>Memory &amp; Debugging</p>
+          <a href="module5.html" class="btn">Open</a>
+        </div>
+        <div class="course-module card">
+          <h2>Module 6</h2>
+          <p>Templates &amp; Metaprogramming</p>
+          <a href="module6.html" class="btn">Open</a>
+        </div>
+        <div class="course-module card">
+          <h2>Module 7</h2>
+          <p>System Design &amp; Advanced</p>
+          <a href="module7.html" class="btn">Open</a>
+        </div>
       </div>
     </div>
   </main>
