refactor: update exercises layout to use circular spinning 3D ticket carousel, enhance animation and comments

--- a/exercises.html
+++ b/exercises.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohad’s WeCode | Exercises</title>
   <link rel="stylesheet" href="styles/style.css">
-  <!-- Interact.js removed as it's no longer needed -->
+  <!-- Interact.js removed as it's no longer needed for dragging -->
 </head>
 <body class="page-exercises fade-in">
   <header>
@@ -29,7 +29,7 @@
       Explore interactive modules presented as 3D tickets! Each ticket is a quick link to a topic.
     </p>
 
-    <!-- New wrapper for the spinning well -->
+    <!-- NEW: Wrapper for the spinning carousel -->
     <div class="modules-wrapper">
       <div class="modules-grid" id="modulesGrid">
         <!-- Module Tickets -->
