refactor: remove Interact.js, enhance carousel navigation, and improve layout comments

--- a/exercises.html
+++ b/exercises.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohad’s WeCode | Exercises</title>
   <link rel="stylesheet" href="styles/style.css">
-  <!-- No need for Interact.js -->
+  <!-- Interact.js has been removed since dragging is no longer needed -->
 </head>
 <body class="page-exercises fade-in">
   <header>
@@ -26,10 +26,10 @@
   <main class="page-content">
     <h1>Advanced C++ Interview Syllabus</h1>
     <p class="subtitle">
-      Explore interactive modules presented as 3D tickets! Use the navigation buttons to move between modules.
+      Explore interactive modules presented as 3D tickets! Use the navigation buttons to cycle through the modules.
     </p>
 
-    <!-- Carousel Container -->
+    <!-- NEW: Carousel Container -->
     <div class="carousel-container">
       <div class="carousel" id="carousel">
         <!-- Module Tickets -->
