refactor: update comments and styles for 3D ticket carousel, enhance clarity and layout structure

--- a/exercises.html
+++ b/exercises.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohad’s WeCode | Exercises</title>
   <link rel="stylesheet" href="styles/style.css">
-  <!-- Interact.js has been removed since dragging is no longer needed -->
+  <!-- Interact.js removed since dragging is no longer needed -->
 </head>
 <body class="page-exercises fade-in">
   <header>
@@ -26,11 +26,12 @@
   <main class="page-content">
     <h1>Advanced C++ Interview Syllabus</h1>
     <p class="subtitle">
-      Explore interactive modules presented as 3D tickets! Use the navigation buttons to cycle through the modules.
+      Explore interactive modules presented as 3D tickets! Use the navigation buttons to switch between modules.
     </p>
 
     <!-- NEW: Carousel Container -->
     <div class="carousel-container">
+      <!-- This inner element will be rotated -->
       <div class="carousel" id="carousel">
         <!-- Module Tickets -->
         <div class="course-module card">
