refactor: update comments for 3D ticket carousel, enhance clarity and consistency in styles

--- a/exercises.html
+++ b/exercises.html
@@ -29,9 +29,9 @@
       Explore interactive modules presented as 3D tickets! Use the navigation buttons to switch between modules.
     </p>
 
-    <!-- NEW: Carousel Container -->
+    <!-- Carousel Container -->
     <div class="carousel-container">
-      <!-- This inner element will be rotated -->
+      <!-- Carousel: This element will rotate based on button clicks -->
       <div class="carousel" id="carousel">
         <!-- Module Tickets -->
         <div class="course-module card">
